--- a/src/features/DifficultyStats/DifficultyStats.module.css
+++ b/src/features/DifficultyStats/DifficultyStats.module.css
@@ -2,5 +2,54 @@
   .statItem {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+
+    span {
+      display: flex;
+      align-items: center;
+      gap: var(--spacing-xs);
+
+      .badge {
+        background-color: var(--border-color);
+        padding: 0 var(--spacing-xs);
+        height: calc(var(--ui-size) / 2);
+        position: relative;
+        overflow: hidden;
+
+        svg {
+          color: var(--text-on-primary-color);
+        }
+
+        &[data-shiny="true"] {
+          background-color: var(--primary-color);
+        }
+
+        &[data-shiny="true"]::before {
+          content: "";
+          position: absolute;
+          width: 2.5rem;
+          height: 0.5rem;
+          transform: rotate(135deg);
+          background-color: var(--primary-shine-color);
+          animation: shiny calc(var(--anim-duration) * 20) var(--anim-easing)
+            forwards infinite;
+        }
+
+        @keyframes shiny {
+          0%,
+          70% {
+            left: -100%;
+          }
+
+          100% {
+            left: 100%;
+          }
+        }
+      }
+    }
+
+    svg {
+      color: var(--border-color);
+    }
   }
 }
