--- a/src/features/DifficultyStats/DifficultyStats.module.css
+++ b/src/features/DifficultyStats/DifficultyStats.module.css
@@ -15,6 +15,7 @@
         height: calc(var(--ui-size) / 2);
         position: relative;
         overflow: hidden;
+        color: var(--text-color);
 
         svg {
           color: var(--text-on-primary-color);
