fix: move tutorial to the top

--- a/src/features/Tutorial/Tutorial.module.css
+++ b/src/features/Tutorial/Tutorial.module.css
@@ -5,7 +5,7 @@
   position: absolute;
   width: var(--ui-width);
   left: var(--side-padding);
-  bottom: var(--spacing-xl);
+  top: var(--spacing-xl);
   user-select: none;
 
   .icon {
