--- a/src/features/Objectives/Objectives.module.css
+++ b/src/features/Objectives/Objectives.module.css
@@ -37,6 +37,7 @@
     .hintIndicator {
       position: absolute;
       left: 50%;
+      transform: translateX(-50%);
       bottom: calc(100% + 0.125rem);
       pointer-events: none;
       color: var(--text-color);
